--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     text-transform: uppercase;
     font-size: 30px;
     color: black;
+    margin-bottom: 5px;;
 }
 .box p{
     text-align: center;
@@ -50,4 +51,20 @@ form input{
     text-align: center;
     background-color: #fff;
 
+}
+button{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #fff;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  
+
+
+    
 }
