--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .box{
-   width: 40%;
+   width: 60%;
    background-color: aquamarine;
     margin: auto;
     margin-top: 10px;
@@ -41,6 +41,7 @@ form input{
     border-radius: 10px;
     border: 1px solid black;
     text-align: center;
+    margin-bottom: 10px;
 }
 .available{
     width: 50%;
